Fix layout issue

--- a/src/components/NewsPaperOnlineArticle.css
+++ b/src/components/NewsPaperOnlineArticle.css
@@ -37,12 +37,7 @@
   
   .fp-item {
     background-color: #efefef;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 200px;
-    height: 100%;
-    width: 100%;
+    min-height: 100%;
   }
 
   .textBox {
